@@ -16,8 +16,13 @@
 
 #include <stdio.h>
 
-#ifdef STDC_HEADERS
+#if defined(STDC_HEADERS)
+#include <string.h>
 #include <stdlib.h>
+#elif defined(HAVE_STRING_H)
+#include <string.h>
+#elif defined(HAVE_STRINGS_H)
+#include <strings.h>
 #endif /* STDC_HEADERS */
 
 #include <libintl.h>
