@@ -1,3 +1,7 @@
+Mon Jul 22 01:18:18 BST 2002  Colin Watson  <cjwatson@debian.org>
+
+	* libdb/db_ver.c: Include <string.h> for strcmp().
+
 Wed Jul 17 20:30:30 BST 2002  Colin Watson  <cjwatson@debian.org>
 
 	* src/wrapper.c: Include <locale.h> even under --disable-nls.
